implementation mail.service.resetPassword
ajout User.service
 updatePasswordToken
suppression Entity

deplacement dossier template => mail/templates

--- a/src/mail/templates/reset_password.hbs
+++ b/src/mail/templates/reset_password.hbs
@@ -1,4 +1,4 @@
-<h1>hello there {{user.name}} {{user.firstname}}</h1>
+<h1>hello there </h1>
 <p> Une personne a demandé une réinitialisation de votre votre de passe </br>
 si il s'agit bien de vous, il vous suffit de cliquer sur le lien ci dessous</br>
 <p>{{token}}</p>
