envoi d'email fonctionne
ajouté Partial pour handlebars
crée partial signature
ajouté valuer  de contexte pour l'email reset_password
ajouté récupération de l'adresse du client
ajoutée variable pour confiuguration
 du controleur que le FE doit appeler
 pour le formulaire de saisie du noiveua mot de passe

--- a/src/mail/templates/reset_password.hbs
+++ b/src/mail/templates/reset_password.hbs
@@ -1,8 +1,15 @@
-<h1>hello there </h1>
+<h1>hello there 
+  {{#with user}}
+  {{firstname}} {{lastname}}
+  {{/with}}
+</h1>
 <p> Une personne a demandé une réinitialisation de votre votre de passe </br>
 si il s'agit bien de vous, il vous suffit de cliquer sur le lien ci dessous</br>
-<p>{{token}}</p>
+<a href={{host}}/{{controler}}/{{token}}>reinitialisez votre email</a>
 <p>dans le cas contraire vous pouvez sans risque ignorer et supprimer cet email</p>
 
 <p>Cordialement</p>
-<footer>signature</footer>
+<footer>{{#>signature}}
+    notre signature
+  {{/signature}}
+</footer>
