--- a/src/mail/templates/reset_password.hbs
+++ b/src/mail/templates/reset_password.hbs
@@ -1,15 +1,30 @@
-<h1>hello there 
-  {{#with user}}
-  {{firstname}} {{lastname}}
-  {{/with}}
-</h1>
-<p> Une personne a demandé une réinitialisation de votre votre de passe </br>
-si il s'agit bien de vous, il vous suffit de cliquer sur le lien ci dessous</br>
-<a href={{host}}/{{controler}}/{{token}}>reinitialisez votre email</a>
-<p>dans le cas contraire vous pouvez sans risque ignorer et supprimer cet email</p>
+<html>
+  <head>
+     {{#>head}}
+        <meta charset="utf-8">
+      {{/head}}
+  </head>
+  <body>
+    
 
-<p>Cordialement</p>
-<footer>{{#>signature}}
-    notre signature
-  {{/signature}}
-</footer>
+    <h1>hello there 
+      {{#with user}}
+      {{firstname}} {{lastname}}
+      {{/with}}
+    </h1>
+    <p> Une personne a demandé une réinitialisation de votre votre de passe </br>
+    si il s'agit bien de vous, il vous suffit de cliquer sur le lien ci dessous</br>
+    <a href="{{host}}/{{controler}}/{{token}}"> ezfzefzerftzq</a>
+    <p>dans le cas contraire vous pouvez sans risque ignorer et supprimer cet email</p>
+
+    <p>si le lien ne fonctionne pas, il vous faudrat le copier pour le coller*
+      dans la barre d'addresse de votre navigateur</p>
+
+    <p>Cordialement</p>
+    <footer>
+      {{#>signature}}
+        notre signature
+      {{/signature}}
+    </footer>
+  </body>
+</html>
