--- a/src/mail/templates/reset_password.hbs
+++ b/src/mail/templates/reset_password.hbs
@@ -14,7 +14,7 @@
     </h1>
     <p> Une personne a demandé une réinitialisation de votre votre de passe </br>
     si il s'agit bien de vous, il vous suffit de cliquer sur le lien ci dessous</br>
-    <a href="{{host}}/{{controler}}/{{token}}"> ezfzefzerftzq</a>
+    <a href="{{host}}/{{controler}}/{{token}}">{{host}}/{{controler}}/{{token}}</a>
     <p>dans le cas contraire vous pouvez sans risque ignorer et supprimer cet email</p>
 
     <p>si le lien ne fonctionne pas, il vous faudrat le copier pour le coller*
