--- a/src/mail/templates/reset_password.hbs
+++ b/src/mail/templates/reset_password.hbs
@@ -13,17 +13,16 @@
       {{/with}}
     </h1>
     <p> Une personne a demandé une réinitialisation de votre votre de passe </br>
-    si il s'agit bien de vous, il vous suffit de cliquer sur le lien ci dessous</br>
-    <a href="{{host}}/{{controler}}/{{token}}">{{host}}/{{controler}}/{{token}}</a>
+    si il s'agit bien de vous, il vous suffit de cliquer
+    <a href="{{host}}/{{controler}}/{{token}}">
+      sur ce lien
+    </a>
     <p>dans le cas contraire vous pouvez sans risque ignorer et supprimer cet email</p>
-
-    <p>si le lien ne fonctionne pas, il vous faudrat le copier pour le coller*
-      dans la barre d'addresse de votre navigateur</p>
 
     <p>Cordialement</p>
     <footer>
       {{#>signature}}
-        notre signature
+        une signature
       {{/signature}}
     </footer>
   </body>
