fix typo for controler + pass reset token as query param in url

--- a/src/mail/templates/reset_password.hbs
+++ b/src/mail/templates/reset_password.hbs
@@ -5,16 +5,16 @@
       {{/head}}
   </head>
   <body>
-    
 
-    <h1>hello there 
+
+    <h1>hello there
       {{#with user}}
       {{firstname}} {{lastname}}
       {{/with}}
     </h1>
     <p> Une personne a demandé une réinitialisation de votre votre de passe </br>
     si il s'agit bien de vous, il vous suffit de cliquer
-    <a href="{{host}}/{{controler}}/{{token}}">
+    <a href="{{host}}/{{controller}}?resetToken={{token}}">
       sur ce lien
     </a>
     <p>dans le cas contraire vous pouvez sans risque ignorer et supprimer cet email</p>
